# ai-maestro-assistant-manager-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ai-maestro-assistant-manager-agent.agent.toml  cliff.toml  pyproject.toml
.claude-plugin/: plugin.json
.githooks/: pre-push
.serena/: project.yml
agents/: ai-maestro-assistant-manager-agent-main-agent.md  amama-assistant-manager-main-agent.md  amama-report-generator.md
commands/: amama-approve-plan.md  amama-orchestration-status.md  amama-planning-status.md  amama-respond-to-amcos.md  amama-respond-to-ecos.md
docs/: AGENT_OPERATIONS.md  FULL_PROJECT_WORKFLOW.md  ROLE_BOUNDARIES.md  TEAM_REGISTRY_SPECIFICATION.md
git-hooks/: pre-push
hooks/: hooks.json
rules/: memory-protocol.md
scripts/: amama_append_log.py  amama_approve_plan.py  amama_atomic_write.py  amama_design_search.py  amama_download.py  amama_init_design_folders.py  amama_memory_manager.py  amama_memory_operations.py  amama_notify_agent.py  amama_orchestration_status.py  amama_planning_status.py  amama_proposal_approvals.py  amama_report_writer.py  amama_session_end.py  amama_session_start.py  amama_state_paths.py  amama_stop_check.py  amama_user_prompt_submit.py  bump_version.py  check_version_consistency.py  cpv_validation_common.py  eama_download.py  lint_files.py  pre-push-hook.py  publish.py  setup_git_hooks.py  setup_marketplace_automation.py  setup_plugin_pipeline.py  smart_exec.py  update_marketplace_metadata.py  validate_agent.py  validate_command.py  validate_documentation.py  validate_encoding.py  validate_enterprise.py  (+12 more)
(+165 files in other folders)
